// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui-rendering notificationsUI event activeTransaction-txPending should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txPending bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has started</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`ui-rendering notificationsUI event activeTransaction-txRequest should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txRequest bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction is waiting for you to confirm</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration bn-duration-hidden\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">NaN sec</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;

exports[`ui-rendering notificationsUI event activeTransaction-txSent should trigger correct DOM render 1`] = `
"
    
  <div class=\\"\\" id=\\"blocknative-notifications\\" style=\\"transform: translate(600px); right: 0px; bottom: 0px;\\"><div class=\\"bn-notifications-scroll\\" style=\\"overflow-y: initial; overflow-x: initial; height: auto;\\"><ul class=\\"bn-notifications\\"><li class=\\"bn-notification bn-progress bn-txSent bn-cf7fc5a7-1498-419e-8bf9-654d06af5534 \\" style=\\"transform: translate(600px);\\">
		<span class=\\"bn-status-icon \\">
      <div class=\\"progress-tooltip \\">
				<div class=\\"progress-tooltip-inner\\">
					You will be notified when this transaction is completed.
				</div>
			</div>
		</span>
		<div class=\\"bn-notification-info\\">
			<p>Your transaction ID: 1235 has been sent to the network</p>
			<p class=\\"bn-notification-meta\\">
				<a href=\\"#\\" class=\\"bn-timestamp\\">12:00 AM</a>
				<span class=\\"bn-duration\\"> - 
					<i class=\\"bn-clock\\"></i>
					<span class=\\"bn-duration-time\\">6 min</span>
				</span>
			</p>
		</div>
	</li></ul></div><a class=\\"\\" id=\\"bn-transaction-branding\\" href=\\"https://www.blocknative.com/\\" target=\\"_blank\\" style=\\"float: right;\\"></a></div>"
`;
